--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -40,3 +40,9 @@ a {
     color-scheme: dark;
   }
 }
+
+input[type="date"]::-webkit-inner-spin-button,
+input[type="date"]::-webkit-calendar-picker-indicator {
+    display: none;
+    -webkit-appearance: none;
+}
