--- a/src/styles/Sidebar.module.css
+++ b/src/styles/Sidebar.module.css
@@ -16,14 +16,15 @@
     border-bottom-right-radius: 35px;
   }
   .sidebarButton {
-    width: 50px;
-    height: 50px;
+    width: 60px;
+    height: 60px;
     border: none;
     background: none;
+    color: white;
   }
   .sidebarButtonSelected {
-    width: 50px;
-    height: 50px;
+    width: 60px;
+    height: 60px;
     border: none;
     border-radius: 100%;
     background: white;
