style: add placeholder styles for search bar input

--- a/src/styles/Searchbar.module.css
+++ b/src/styles/Searchbar.module.css
@@ -6,3 +6,8 @@
     border: none;
     border-radius: 8px;
 }
+.searchBar::placeholder {
+    font-size: 18px;
+    font-weight: 400;
+    font-family: Poppins;
+}
