--- a/src/styles/hotels.module.css
+++ b/src/styles/hotels.module.css
@@ -7,7 +7,7 @@
     flex-direction: row;
     flex-grow: 1;
     height: 100vh;
-    margin-left: 20px;
+    /* margin-left: 20px; */
     background-color: white;
     color: black;
   }
