--- a/src/styles/Sidebar.module.css
+++ b/src/styles/Sidebar.module.css
@@ -9,8 +9,8 @@
     gap: 72px;
     height: 1080px;
     width: 157px;
-    background-color: #3835de;
-    overflow-x: hidden;
+    background-color: #2D3DDF;
+    /* overflow-x: hidden; */
     border-top-right-radius: 38px;
     border-bottom-right-radius: 38px;
   }
@@ -52,7 +52,7 @@
     gap: 10px;
     height: 100px;
     width: 100%;
-    background-color: #3835de;
+    background-color: #2D3DDF;
     overflow-x: hidden;
     border-top-right-radius: 35px;
     border-top-left-radius: 35px;
