--- a/src/styles/payment-details.module.css
+++ b/src/styles/payment-details.module.css
@@ -12,6 +12,13 @@
   width: 100%;
 }
 
+.backButton {
+  border: none;
+  margin-top: 43px;
+  margin-left: 188px;
+  margin-bottom: 73px;
+}
+
 .paymentDetailsContent {
   display: flex;
   flex-direction: row;
@@ -39,6 +46,7 @@
 .paymentDetailsButtonSelected {
   display: flex;
   flex-direction: row;
+  justify-content: space-between;
   align-items: center;
   align-self: flex-start;
   max-width: 605px;
@@ -69,4 +77,17 @@
   flex-direction: row;
   justify-content: space-between;
   margin-bottom: 10px;
+}
+
+.iconWayWrapper {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
+.confirmButton {
+  border: none;
+  align-self: center;
+  justify-content: center;
 }
