--- a/src/styles/hotels.module.css
+++ b/src/styles/hotels.module.css
@@ -2,17 +2,13 @@
 @media (min-width: 768px) {
   .hotelsContainer {
     display: flex;
-    flex-direction: column;
-    justify-content: space-between;
+    flex-direction: row;
     margin-left: 188px;
-    
   }
   .headerContainer {
     display: flex;
     flex-direction: column;
     margin-top: 43px;
-    margin-bottom: 32px;
-
   }
   .headerBackSearchContainer {
     display: flex;
@@ -23,13 +19,99 @@
     flex-direction: row;
     justify-content: space-between;
   }
-  .sortButtonContainer{
-    margin-right: 243px;
+  .headerTextContainer {
+    font-size: 20px;
+    font-weight: 600;
+    margin-top: 33px;
+    margin-bottom: 28px;
+  }
+  .sortButtonContainer {
+    display: flex;
+    justify-content: flex-end;
+    margin-top: 20px;
+    /* margin-right: 243px; */
+    margin-bottom: 15px;
+    gap: 22px;
+  }
+
+  .headerButton {
+    width: 101px;
+    height: 56px;
+    border-radius: 4px;
+    border: 1px solid #2d3ddf;
+    background-color: #ffffff;
+    color: #2d3ddf;
+    font-size: 20px;
+    font-weight: 600;
   }
 
   .hotelListContainer {
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
+    gap: 10px;
+  }
+
+  .eachHotelContainer {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 40px;
+  }
+
+  .eachHotelInfoContainer {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    margin-top: 12px;
+  }
+  .eachHotelNameText {
+    font-size: 20px;
+    font-weight: 600;
+  }
+  .detailsButton {
+    width: 184px;
+    height: 52px;
+    background-color: #ffffff;
+    color: #2d3ddf;
+    font-size: 18px;
+    font-weight: 600;
+    border: none;
+    filter: drop-shadow(0px 0px 6px rgba(0, 0, 0, 0.2));
+  }
+  .detailsButton:hover {
+    cursor: pointer;
+  }
+
+  .recommendedContainer {
+    width: 285px;
+    margin-top: 119px;
+    margin-left: 56px;
+    filter: drop-shadow(-10px 0px 36px rgba(0, 0, 0, 0.098));
+    border: none;
+    /* border: 2px solid red; */
+  }
+  .recommendedHeaderText {
+    margin-top: 28px;
+    margin-bottom: 8px;
+    margin-left: 15px;
+    font-size: 18px;
+    font-weight: 600;
+  }
+  .eachRecommendedContainer {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 40px;
+    margin-left: 15px;
+    margin-right: 15px;
+  }
+  .eachRecInfoContainer {
+    display: flex;
+    flex-direction: row;
+    margin-top: 7px;
+  }
+  .recImg {
+    border-radius: 15px;
+    filter: drop-shadow(0px 0px 6px rgba(0, 0, 0, 0.25));
   }
 }
 
