--- a/src/styles/hotels.module.css
+++ b/src/styles/hotels.module.css
@@ -9,6 +9,7 @@
     display: flex;
     flex-direction: column;
     margin-top: 43px;
+    width: 1391px;
   }
   .headerBackSearchContainer {
     display: flex;
