--- a/src/styles/Sidebar.module.css
+++ b/src/styles/Sidebar.module.css
@@ -7,7 +7,7 @@
     justify-content: center;
     align-items: center;
     gap: 72px;
-    height: 1080px;
+    height: 100vh;
     width: 157px;
     background-color: #2D3DDF;
     /* overflow-x: hidden; */
