--- a/src/styles/hotel[id].module.css
+++ b/src/styles/hotel[id].module.css
@@ -1,9 +1,7 @@
 .container {
   display: flex;
   flex-direction: column;
-  justify-content: center;
   margin-left: 188px;
-  margin-right: 341px;
 }
 
 .headerContainer {
@@ -15,16 +13,60 @@
 
 .headerButtonContainer {
   display: flex;
-  justify-content: space-between;
   gap: 20px;
   margin-bottom: 24px;
 }
 
-.dateButton {
-  width: 258.5px;
-  height: 62px;
+.contentContainer {
+  display: flex;
+  flex-direction: row;
+  gap: 84px;
 }
 
+.headerLocationButton {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  width: 361px;
+  height: 62px;
+  background-color: #ffffff;
+  border: 1px solid #b5b5b5;
+  border-radius: 4px;
+}
+
+.headerLocationButtonText {
+  margin-left: 35px;
+}
+
+.dateButton {
+  width: 517px;
+  height: 62px;
+  background-color: #ffffff;
+  border: 1px solid #b5b5b5;
+}
+
+.dateButtonInsideContainer {
+  display: flex;
+  flex-direction: row;
+  border-radius: 4px;
+  gap: 180.27px;
+  justify-content: center;
+}
+
+.peopleButton {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  width: 441px;
+  height: 62px;
+  background-color: #ffffff;
+  border: 1px solid #b5b5b5;
+  border-radius: 4px;
+}
+
+.peopleButtonText {
+  margin-left: 36px;
+}
 .searchButton {
   width: 256px;
   height: 62px;
@@ -38,8 +80,22 @@
 
 .hotelInfoContainer {
   display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.hotelInfoImgContainer {
+  display: flex;
+  flex-direction: row;
+}
+
+.hotelInfo {
+  display: flex;
   flex-direction: row;
   justify-content: space-between;
+}
+.hotelInfoText {
+  margin-top: 12px;
 }
 
 .hotelPriceBox {
@@ -53,37 +109,88 @@
   border: 1px solid #2d3ddf;
   border-radius: 4px;
   border-color: #2d3ddf;
+  margin-top: 19px;
   margin-bottom: 45px;
 }
-.hotelTypeCardContainer {
-  display: flex;
-  width: 692.39px;
-  height: 173x;
-}
 
-.bookNowButton {
-  width: 173px;
-  height: 64px;
-  border: none;
-  border-radius: 4px;
-  transform-origin: 0 0;
-  /* transform: rotate(90deg); */
+.hotelName {
+  font-size: 28px;
+  font-weight: 600;
+  color: #221f3c;
+}
+.hotelLocation {
   font-size: 18px;
-  background-color: #2d3ddf;
-  color: #ffffff;
+  font-weight: 400;
+  color: #b7bcf3;
 }
 
 .roomTypeContainer {
   display: flex;
   flex-direction: row;
-  gap: 0px;
-  margin-bottom: 100px;
-  margin-right: 124px;
+  background-color: #ffffff;
+  border-radius: 8px;
+  overflow: hidden;
+  margin-bottom: 16px;
+  max-width: 500px;
+  border: 1px solid #D1D1D1;
+}
+
+.roomTypeContainer img {
+  width: 174px;
+  height: 145px;
+  object-fit: cover;
+  flex-shrink: 0;
 }
 
 .roomInfoContainer {
   display: flex;
   flex-direction: column;
+  justify-content: center;
+  padding: 20px;
+  flex-grow: 1;
+  background-color: #f8f9fa;
+}
+
+.roomNameText {
+  font-size: 14px;
+  font-weight: 500;
+  color: #333;
+  margin-bottom: 8px;
+}
+
+.roomPriceText {
+  font-size: 25px;
+  font-weight: bold;
+  color: #2d3ddf;
+}
+
+.bookNowButton {
+  width: 53.52px;
+  height: 144.67px;
+  border: none;
+  border-radius: 4px;
+  font-size: 14px;
+  font-weight: bold;
+  background-color: #2d3ddf;
+  color: #ffffff;
+  writing-mode: vertical-lr;
+  text-orientation: mixed;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+}
+
+.bookNowButton:hover {
+  background-color: #1e2ab8;
+}
+
+.roomCardsContainer {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  gap: 16px;
+  padding: 20px;
 }
 
 .reviewContainer {
@@ -94,7 +201,40 @@
 .reviewHeaderContainer {
   display: flex;
   flex-direction: row;
+}
 
+.ratingBox {
+  position: relative;
+  width: 75.38px;
+  height: 59px;
+  margin-bottom: 33px;
+}
+
+.ratingText {
+  position: absolute;
+  top: 50%;
+  left: 40%;
+  transform: translate(-50%, -50%);
+  color: white;
+  font-size: 28px;
+  font-weight: 700;
+}
+
+.reviewTextContainer {
+  margin-top: 6px;
+}
+.excellentText {
+  color: #221f3c;
+  font-size: 20px;
+  font-weight: 500;
+  margin-bottom: 5px;
+  margin-left: 21.56px;
+}
+.reviewText {
+  color: #b7bcf3;
+  font-size: 16px;
+  font-weight: 400;
+  margin-left: 21.56px;
 }
 
 .reviewIconContainer {
@@ -109,12 +249,37 @@
   align-items: center;
   width: 50.59px;
   height: 50.59px;
-
-  box-shadow: 0px 4px 6px #000000 19.2%;
+  filter: drop-shadow(0px 0px 6xpx rgb(0, 0, 0, 0.192));
 }
 
 .ratingContainer {
   display: flex;
   flex-direction: row;
+  width: 228.81px;
   justify-content: space-between;
+}
+
+.ratingStarImg {
+  margin-bottom: 13.81px;
+}
+
+.ratingCategoryText {
+  margin-bottom: 9px;
+}
+
+.servicesText {
+  margin-top: 31px;
+  margin-bottom: 10px;
+}
+
+.demandContainer {
+  display: flex;
+  align-items: center;
+  margin-top: 31px;
+}
+
+.demandText {
+  color: #2d3ddf;
+  font-size: 20px;
+  font-weight: 600;
 }
