--- a/src/styles/payment-details.module.css
+++ b/src/styles/payment-details.module.css
@@ -42,6 +42,7 @@
   width: fit-content;
   height: 59px;
   background-color: white;
+  margin-bottom: 25px;
 }
 .paymentDetailsButtonSelected {
   display: flex;
@@ -85,9 +86,17 @@
   justify-content: center;
   align-items: center;
 }
+.iconWayWrapperSelected {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  margin-left: 27.2px;
+}
 
 .confirmButton {
   border: none;
   align-self: center;
   justify-content: center;
+  margin-right: 27.2;
 }
