--- a/src/styles/reviewhotel.module.css
+++ b/src/styles/reviewhotel.module.css
@@ -128,11 +128,7 @@
   height: 52px;
   margin-right: 12px;
   margin-bottom: 12px;
-}
-
-.guestInputField::placeholder {
   padding-left: 24.4px;
-  padding-top: 15px;
 }
 
 .addGuestButton {
@@ -211,6 +207,7 @@
 .requestInput {
   width: 867px;
   height: 129px;
+  margin-bottom: 32px;
 }
 
 .continueButton {
@@ -245,6 +242,17 @@
   font-weight: 700;
   font-size: 22px;
   /* color: #2d3ddf; */
+}
+
+.paymentPolicy {
+  width: 482px;
+  height: 200px;
+  background: white;
+  filter: drop-shadow(0px 3px 6px rgba(0, 0, 0, 0.161));
+}
+
+.paymentPolicyTextContainer {
+  margin-left: 20px;
 }
 
 .cancelText {
