--- a/src/styles/hotels.module.css
+++ b/src/styles/hotels.module.css
@@ -9,7 +9,6 @@
     display: flex;
     flex-direction: column;
     margin-top: 43px;
-    
   }
   .headerBackSearchContainer {
     display: flex;
@@ -118,4 +117,136 @@
 
 /* mobile */
 @media (max-width: 767px) {
+  .hotelsContainer {
+    display: flex;
+    flex-direction: column-reverse;
+    align-items: center;
+    margin: 0;
+    padding: 10px;
+  }
+
+  .headerContainer {
+    width: 100%;
+    margin-top: 20px;
+  }
+
+  .headerBackSearchContainer {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+  }
+
+  .headerSortFilter {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    margin-top: 20px;
+  }
+
+  .headerTextContainer {
+    text-align: center;
+    font-size: 18px;
+    margin-top: 15px;
+    margin-bottom: 12px;
+    font-weight: 600;
+  }
+
+  .sortButtonContainer {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 10px;
+    margin-top: 10px;
+    margin-bottom: 20px;
+  }
+
+  .headerButton {
+    width: 100px;
+    height: 60px;
+    border-radius: 4px;
+    border: 1px solid #2d3ddf;
+    background-color: #ffffff;
+    color: #2d3ddf;
+    font-size: 20px;
+    font-weight: 600;
+  }
+
+  .hotelListContainer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    padding: 0;
+    gap: 20px;
+  }
+
+  .eachHotelContainer {
+    width: 100%;
+    margin-bottom: 20px;
+    padding: 0 10px;
+  }
+
+  .eachHotelInfoContainer {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    text-align: center;
+    margin-top: 10px;
+  }
+
+  .eachHotelNameText {
+        font-size: 20px;
+    font-weight: 600;
+  }
+
+  .detailsButton {
+    font-size: 16px;
+    margin-top: 10px;
+    width: 184px;
+    height: 52px;
+    background-color: #ffffff;
+    color: #2d3ddf;
+    font-size: 18px;
+    font-weight: 600;
+    border: none;
+    filter: drop-shadow(0px 0px 6px rgba(0, 0, 0, 0.2));
+  }
+
+  .recommendedContainer {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    margin-top: 30px;
+    margin-left: 0;
+    padding: 0 10px;
+    filter: none;
+  }
+
+  .recommendedHeaderText {
+    text-align: center;
+    font-size: 16px;
+    margin-left: 0;
+  }
+
+  .eachRecommendedContainer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 20px 0;
+  }
+
+  .eachRecInfoContainer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    margin-top: 10px;
+  }
+
+  .recImg {
+    width: 100%;
+    height: auto;
+    border-radius: 10px;
+    filter: none;
+  }
 }
