feat: removed max-width for searchButton in mobile mode

--- a/src/styles/index.module.css
+++ b/src/styles/index.module.css
@@ -433,7 +433,7 @@
 
   .searchButton {
     width: 100%;
-    max-width: 280px;
+    /* max-width: 280px; */
     height: 56px;
     border: 1px solid #2d3ddf;
     margin-bottom: 24px;
