--- a/src/styles/hotel[id].module.css
+++ b/src/styles/hotel[id].module.css
@@ -374,19 +374,21 @@
     margin-left: 0;
   }
 
-  .dateButtonInsideContainer {
-    flex-direction: column;
+
+  .checkInPart {
+    flex: 1;
+    border-right: 1px solid #b5b5b5;
+    height: 62px;
+    display: flex;
+    align-items: center;
     justify-content: center;
-    height: auto;
   }
 
-  .checkInPart,
   .checkOutPart {
-    border: none;
-    height: 25px;
-  }
-  .checkInPart {
-    border-bottom: 1px solid #b5b5b5;
+    flex: 1;
+    display: flex;
+    align-items: center;
+    justify-content: center;
   }
 
   .hotelInfoContainer {
