--- a/src/styles/hotel[id].module.css
+++ b/src/styles/hotel[id].module.css
@@ -166,6 +166,7 @@
     overflow: hidden;
     margin-bottom: 16px;
     max-width: 500px;
+    width: 488px;
     border: 1px solid #d1d1d1;
   }
 
