--- a/src/styles/payment-done.module.css
+++ b/src/styles/payment-done.module.css
@@ -1,20 +1,82 @@
-.container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+/* desktop */
+@media (min-width: 768px) {
+  .container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .imgDone {
+    margin-top: 167px;
+    margin-bottom: 48px;
+  }
+
+  .bookingCompleteText {
+    font-weight: 600;
+    font-size: 48px;
+    color: #2d3ddf;
+    margin-bottom: 6px;
+  }
+
+  .scheduleText {
+    font-weight: 300;
+    font-size: 20px;
+    margin-bottom: 49px;
+  }
+
+  .homeButton {
+    width: 243px;
+    height: 62px;
+    background-color: #2d3ddf;
+    font-weight: 500;
+    font-size: 22px;
+    color: white;
+    border: none;
+    border-radius: 4px;
+  }
+  .homeButton:hover {
+    background-color: #1b2bb8;
+    cursor: pointer;
+  }
 }
 
-.homeButton {
-  width: 243px;
-  height: 62px;
-  background-color: #2d3ddf;
-  font-weight: 500;
-  font-size: 22px;
-  color: white;
-  border: none;
-  border-radius: 4px;
-}
-.homeButton:hover {
-  background-color: #1b2bb8;
-  cursor: pointer;
+/* mobile */
+@media (max-width: 767px) {
+  .container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .imgDone {
+    width: 342px;
+    height: 200px;
+    margin-top: 167px;
+    margin-bottom: 48px;
+  }
+
+  .bookingCompleteText {
+    text-align: center;
+    font-weight: 700;
+    font-size: 24px;
+    color: #2d3ddf;
+    margin-bottom: 12px;
+  }
+
+  .scheduleText {
+    font-weight: 300;
+    font-size: 16px;
+    margin-bottom: 208px;
+  }
+
+  .homeButton {
+    width: 243px;
+    height: 62px;
+    background-color: #2d3ddf;
+    font-weight: 500;
+    font-size: 22px;
+    color: white;
+    border: none;
+    border-radius: 4px;
+  }
 }
